--- a/git筆記/入門.md
+++ b/git筆記/入門.md
@@ -1,1 +1,11 @@
-
+## 一、GitHub是什麽？可以做什麽？ ##  
+GitHub是一個基于git的代碼托管平台，免費用戶可以使用公共倉庫，進行建立、下載、提交等代碼管理工作。上傳代碼的同時相當于貢獻個人代碼，是一個程序猿進行文明和精神交流的去處。簡單的說，就是可以學習別人的代碼，可以上傳自己的代碼進行版本管理，追溯自己代碼的版本  
+## 二、GitHub客戶端下載地址 ##  
+https://desktop.github.com/  
+## 三、GitHub客戶端的使用 ##  
+1.安裝GitHub Desktop，直接登錄賬號密碼（可以在官網先進行賬號的設置），默認安裝位置在C:\Users\...AppData\Local\GitHubDesktop\app-1.4.3  
+2.File->New repository... 新建一個倉庫  
+3.File->Add local repository... 添加一個本地倉庫  
+4.File->Clone repository... 下載網上的倉庫，點進去會有3中選擇，GitHub.com/enterprise/URL，選擇URL，local path選擇本地要存放倉庫的路徑  
+5.option：個人一些信息，界面顯示、shell配置等  
+6.Exit：退出桌面程序  
