--- a/git筆記/簡單使用.md
+++ b/git筆記/簡單使用.md
@@ -1,1 +1,43 @@
-
+## 使用GitHub來管理代碼和進行版本控制 ##  
+### Homebrew的安裝 ###  
+進入Homebrew官網，將以下代碼複制到Terminal(使用spotlight搜索terminal即可)：  
+```
+/usr/bin/ruby -e "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/master/install)
+```
+一路敲回車就好，如果需要通過Homebrew來安裝其它組件，操作與以下安裝git類似。  
+想要確認Homebrew是否安裝完畢，只需在Terminal敲入以下指令：  
+```
+$ brew --version
+```  
+出現Homebrew以及對應版本號即表示安裝成功。  
+### git的安裝 ###  
+```
+$ brew install git  
+```  
+輸入以上指令即可通過Homebrew自動安裝git，安裝完畢後，輸入：  
+```
+$ git --version  
+```  
+來確認git是否成功安裝。  
+### Git指令 ###  
+#### 創建本地項目並上傳 ####  
+首先在GitHub上New一個repository，命名demo之後選擇initialize with a README.md來創建新的倉庫  
+創建完成後，在終端進行如下操作：  
+```
+$ cd targetDirectory   #進入想要上傳的文件目錄下
+$ git init     #初始化git
+$ git pull --rebase origin master  #合並本地倉庫不存在的README.md
+$ git add .        #添加當前目錄下所有文件
+$ git commit -m "commit message"   #提交項目到本地倉庫，並添加更新信息
+$ git remote add origin https://github/YourGitHubName/demo.git 
+$ git push -u origin master        #推送本地倉庫到遠程倉庫
+```  
+#### 獲取已有項目，修改後提交 ####  
+選擇一個項目，點擊clone or download，複制URL鏈接，在終端進行如下操作：  
+```
+$ git clone https://github.com/GitHubName/someProject.git
+$ cd someProject/
+$ git add .
+$ git commit -m "commit message"
+$ git push
+```
